--- a/package.json
+++ b/package.json
@@ -26,6 +26,6 @@
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
-    "@sanity.cli": "^2.23.3"
+    "@sanity/cli": "^2.23.3"
   }
 }
